--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:              Clean Blog
-email:              your-email@example.com
+email:              yjohn1209@gmail.com
 description:        A Blog Theme by Start Bootstrap
 author:             Start Bootstrap
 baseurl:            "yoon-janguk1209"
