--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@ title:              Clean Blog
 email:              yjohn1209@gmail.com
 description:        A Blog Theme by Start Bootstrap
 author:             Start Bootstrap
-baseurl:            "yoon-janguk1209"
-url:                "https://startbootstrap.github.io"
+url:                "https://yoon-janguk1209.github.io"
 
 # Social Profiles
 twitter_username:   SBootstrap
